--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "pdf-export-images",
-  "version": "1.0.9",
+  "name": "pdf-exports",
+  "version": "0.1",
   "description": "exports images from a pdf file to disk via CLI",
   "main": "index.js",
   "type": "commonjs",
-  "bin": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,13 +13,15 @@
     "extract",
     "export",
     "cli",
-    "png"
+    "png",
+    "fonts",
+    "text"
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/SalehMahmood/pdf-export-images.git"
+    "url": "https://github.com/SalehMahmood/pdf-exports.git"
   },
-  "author": "Marc Ablay <marc.ablay@gmail.com>",
+  "author": "Saleh Mahmood",
   "license": "ISC",
   "dependencies": {
     "font-converter": "^1.1.1",
